E_CLASSROOM-348 [Bugfix] Quiz title in /categories is not truncated

--- a/src/pages/student/categories/CategoryList/index.module.scss
+++ b/src/pages/student/categories/CategoryList/index.module.scss
@@ -8,48 +8,65 @@
   gap: $gap;
 }
 
-.cardList {
-  display: grid;
-  grid-column-gap: 48px;
-  grid-row-gap: 48px;
-  grid-template-columns: 289px 289px 289px 289px;
-}
-
-#cardHeader {
-  background-color: $color-light-blue-1;
-  border-radius: 2px;
-  width: 290px;
-  height: 167px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  position: relative;
-  z-index: 1;
-  padding: 15px;
-}
-
-.card {
-  height: 217px;
-  width: 292px;
-}
-
-.cardContent {
-  background-color: rgba(34, 60, 119, 0.2);
-  border-radius: 10px;
-  padding: 85px;
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
 .headerSection {
   height: 128px;
-  @include flex(center, none, column, 5px);
   margin: 0px;
+
+  @include flex(center, none, column, 5px);
 }
 
 .title {
   font-weight: $font-weight-medium;
   font-size: $font-size-page-title-lg;
   margin: 0px;
+}
+
+.categoryConditionsStyle {
+  margin-bottom: 45px;
+
+  @include flex(flex-start, center, row, 50px);
+}
+
+.cardList {
+  display: grid;
+  grid-column-gap: 48px;
+  grid-row-gap: 48px;
+  grid-template-columns: 400px 400px 400px;
+}
+
+.card {
+  height: 217px;
+  width: 400px;
+}
+
+#cardHeader {
+  background-color: $color-light-blue-1;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 2px;
+  position: relative;
+  height: 167px;
+  padding: 20px;
+  width: auto;
+  z-index: 1;
+}
+
+.cardTitle {
+  font-size: $font-size-lg;
+  color: $color-dark-blue-1;
+  line-height: 21px;
+}
+
+.cardSubtitle {
+  font-size: $font-size-md;
+  font-weight: 300;
+  line-height: 16px;
+}
+
+.cardContent {
+  background-color: rgba(34, 60, 119, 0.2);
+  border-radius: 10px;
+  padding: 85px;
+  margin: 10px;
 }
 
 .loading {
@@ -63,12 +80,6 @@
   margin-left: 10px;
 }
 
-.cardTitle {
-  color: $color-dark-blue-1;
-  font-size: $font-size-sm;
-  font-weight: $font-weight-regular;
-}
-
 .noResultsMessage {
   margin: 220px 0px;
 
@@ -80,55 +91,9 @@
   font-size: $font-size-page-title;
 }
 
-.cardTitle {
-  font-size: $font-size-lg;
-  font-weight: $font-weight-regular;
-  line-height: 21px;
-}
-
-.cardSubtitle {
-  font-size: $font-size-md;
-  font-weight: 300;
-  line-height: 16px;
-}
-
 #subTitle {
   font-size: $font-size-sm;
   font-weight: 500;
   color: $color-dark-blue-3;
   margin-top: 3px;
-}
-
-.categoryConditionsStyle {
-  display: flex;
-  gap: 50px;
-  align-items: center;
-  margin-bottom: 45px;
-}
-
-.dropdownStyle {
-  display: flex;
-  justify-content: space-between;
-  background-color: #ffffff;
-  border: 1px $color-light-blue-2 solid;
-  color: $color-dark-blue-1;
-  text-decoration: none;
-  width: 120px;
-  height: 30px;
-}
-
-.dropdownStyle:hover {
-  color: $color-dark-blue-1;
-}
-
-.dropdownItemStyle {
-  width: 120px;
-}
-
-.dropdownFocus {
-  background-color: rgba(224, 234, 236, 0.6);
-}
-
-.dropdownMenu {
-  width: 120px;
 }
