--- a/src/pages/student/main/Dashboard/components/Recent/index.module.scss
+++ b/src/pages/student/main/Dashboard/components/Recent/index.module.scss
@@ -2,7 +2,7 @@
 
 .card {
   margin-bottom: 25px;
-  width: 310px;
+  width: 400px;
 }
 
 .cardHeader {
